# ODIBI_CORE

./: .gitignore  5-MINUTE-START.md  ADVANCED_SHOWCASE_SYSTEM_SUMMARY.md  AZURE_INTEGRATION_COMPLETE.md  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  DUAL_MODE_PROJECT_README.md  DUAL_MODE_SHOWCASE_PROJECT_MANIFEST.md  EXECUTION_COMPLETE.md  INSTALL.md  LEARNODIBI_INTERACTIVE_README.md  LICENSE  MANIFEST.in  NATIVE_SHOWCASE_PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SAMPLE_SHOWCASES_COMPARISON.md  SHOWCASE_001_RESULT.txt  START_HERE.md  TROUBLESHOOT_INSTALL.py  VERIFY_INSTALL.md  WALKTHROUGH_SYNTAX_FIXES_COMPLETE.md  debug_walkthrough_path.py  fix_pass_statements.py  fix_summary.md  learnodibi_ui.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_paths.py  validate_learnodibi.py  verify_reorganization.py
.streamlit/: config.toml
docs/: AUDIT_REPORT_PHASE_1_3.md  AZURE_INTEGRATION_INDEX.md  DATA_ENGINEERING_MASTERY_PLAN.md  ODIBI_CORE_MASTERY_INDEX.md  ODIBI_CORE_V1_ENGINEERING_PLAN.md  WALKTHROUGH_AUTHORING_GUIDE.md  index.md
examples/: learnodibi_data_demo.py  phase8_demo.py  phase9_sdk_demo.py
odibi_core/: __init__.py  __version__.py  cli.py
reports/: AMP_VERIFICATION_TRACE.md  LEARNODIBI_10_OUT_OF_10.md  LEARNODIBI_10_OUT_OF_10_REPORT.md  LEARNODIBI_CONTEXT_FINAL_SUMMARY.md  LEARNODIBI_CONTEXT_FIX_REPORT.md  LEARNODIBI_CONTEXT_IMPROVEMENTS.md  LEARNODIBI_CONTEXT_REBUILD_REPORT.md  LEARNODIBI_EXECUTION_CONTEXT_TRACE.md  LEARNODIBI_FINAL_MASTER_GUIDE.md  LEARNODIBI_FIX_COMPLETE.md  LEARNODIBI_ROOT_CAUSE_REPORT.md  LEARNODIBI_STEP_ORDER_TRACE.md  LEARNODIBI_UI_REBUILD_COMPLETE.md  LEARNODIBI_UI_REVALIDATION_SUMMARY.md  LEARNODIBI_USER_GUIDE.md  LEARNODIBI_WALKTHROUGH_MANIFEST_REPORT.md  MANIFEST_RESOLUTION_COMPLETE.md  MANIFEST_VALIDATION_REPORT.md  UI_VALIDATION_RESULTS.md
scripts/: CREATIVE_SHOWCASE_README.md  FINAL_FIX_SCRIPT.py  README.md  advanced_showcase_executor.py  build_pypi.bat  build_pypi.sh  check_db.py  comprehensive_fix.py  creative_showcase_executor.py  creative_showcase_generator.py  creative_showcase_master.py  demo_showcase.py  diagnose_studio.py  diagnostic_tracer.py  dual_mode_showcase_runner.py  final_verification.py  freeze_manifest.py  generate_all_showcases.py  generate_story_index.py  init_showcase_db.py  medallion_data_generator.py  medallion_executor.py  native_showcase_runner.py  quick_walkthrough_fixer.py  regenerate_configs.py  run_first_showcase.py  run_sample_showcases.py  showcase_01_runner.py  test_advanced_showcase.py  test_all.py  test_story_generation.py  validate_all_fixes.py  validate_functions_module.py  verify_fixes.py  verify_learnodibi_ui.py  verify_phase10.py  verify_phase9.py  (+4 more)
(+786 files in other folders)
